--- a/src/pages/Bag_page/Bag_page.module.css
+++ b/src/pages/Bag_page/Bag_page.module.css
@@ -2,7 +2,7 @@
     padding: 70px 150px 0px 150px;
 }
 .bag__active{
-    display: none;
+    /* display: none; */
 }
 .bag__wrapper{
     display: grid;
@@ -39,7 +39,6 @@
 .product__img img{
     width: 100%;
     height: 100%;
-    object-fit: contain;
 }
 .product__info_detail{
     display: flex;
