--- a/src/App.css
+++ b/src/App.css
@@ -69,8 +69,8 @@ html{
   color: var(--primary-color);
 }
 .products__list{
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25% 25% 25% 25% 25% 25% 25%;
+  display: flex;
+  flex-direction: row;
   overflow-x: scroll;
   padding-bottom: 16px;
 }
@@ -117,6 +117,7 @@ html{
   font-weight: 500;
   line-height: 20px;
   color: var(--text-color);
+  cursor: pointer;
 }
 .products__item span{
   font-family: 'Poppins', sans-serif;
