--- a/src/css/Account_page.module.css
+++ b/src/css/Account_page.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 679px;
     font-family: 'Roboto', sans-serif;
-    background-image: url('../../assets/signin.jpg');
+    background-image: url('../assets/signin.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     display: grid;
