--- a/src/css/Bag_page.module.css
+++ b/src/css/Bag_page.module.css
@@ -22,7 +22,7 @@
 }
 .product__item{
     display: grid;
-    grid-template-columns: 30% 4% 64% 2%;
+    grid-template-columns: 40% 4% 54% 2%;
     padding-bottom: 16px;
     border-bottom: 1px solid var(--primary-color);
 }
@@ -33,12 +33,14 @@
     margin-top: 16px;
 }
 .product__img{
-    width: 100%;
+    width: 250px;
+    height: 250px;
     display: flex;
 }
 .product__img img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 .product__info_detail{
     display: flex;
