--- a/src/css/Orders_page.module.css
+++ b/src/css/Orders_page.module.css
@@ -67,3 +67,119 @@ td{
     font-size: 12px;
     color: var(--text-color);
 }
+.list__product{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+.product__list{
+    background-color: #fff;
+    padding: 24px 48px;
+    min-width: 900px;
+    min-height: 400px;
+    display: flex;
+    flex-direction: column;
+    margin: auto auto;
+}
+.product__item{
+    display: grid;
+    grid-template-columns: 30% 4% 64% 2%;
+    padding-bottom: 16px;
+    border-bottom: 1px solid var(--primary-color);
+}
+.product__item:last-child{
+    border: none;
+}
+.product__item + .product__item{
+    margin-top: 16px;
+}
+.product__img{
+    width: 250px;
+    height: 250px;
+    display: flex;
+}
+.product__img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.product__info_detail{
+    display: flex;
+    flex-direction: column;
+    font-family: 'Poppins', sans-serif;
+    color: var(--primary-color);
+}
+.product__info_detail h3{
+    font-size: 20px;
+    font-weight: 600;
+    list-style: 20px;
+    margin: 0;
+}
+.product__info_detail span{
+    font-size: 14px;
+    font-weight: 300;
+    margin: 8px 0;
+    color: var(--text-color);
+}
+.product__info_detail h4{
+    font-size: 22px;
+    font-weight: 600;
+    margin: 16px 0;
+}
+.product__syle,
+.product__color{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.product__syle h5,
+.product__color h5{
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 14px;
+    margin: 0 8px 0 0;
+}
+.quantity span,
+.product__info_detail .product__size{
+    font-size: 14px;
+    font-weight: 300;
+}
+.product__syle span,
+.product__color span{
+    font-weight: 300;
+}
+.quantity{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.quantity .quantity__number{
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--primary-color);
+    margin: 0 8px;
+}
+.quantity div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid var(--primary-color );
+    padding: 2px;
+}
+.quantity div i{
+    font-size: 8px;
+    color: var(--primary-color);
+    cursor: pointer;
+}
+.cart__item-sub-info i{
+    font-size: 18px;
+    color: var(--primary-color);
+    cursor: pointer;
+}
