--- a/src/css/Favorites_page.module.css
+++ b/src/css/Favorites_page.module.css
@@ -15,7 +15,7 @@
     flex-wrap: wrap;
 }
 .favorite__list .products__item{
-    padding: 32px 22px;
+    padding: 32px 12px;
 }
 .products__item + .products__item{
     margin: 0;
@@ -23,4 +23,10 @@
 .btn__favorite{
     min-width: 250px;
     margin-top: 24px;
+}
+.favorite__list .products__item{
+    padding: 32px 5px;
+}
+.products__item + .products__item{
+    margin: 0;
 }
