--- a/src/css/Bag_page.module.css
+++ b/src/css/Bag_page.module.css
@@ -23,7 +23,7 @@
 .product__item{
     width: 100%;
     display: grid;
-    grid-template-columns: 40% 4% 56%;
+    grid-template-columns: 40% 4% 54% 2%;
     padding-bottom: 16px;
     border-bottom: 1px solid var(--primary-color);
 }
