--- a/src/css/ProductInfo_page.module.css
+++ b/src/css/ProductInfo_page.module.css
@@ -121,3 +121,54 @@
 .main .products{
     margin-top: 60px;
 }
+
+.comment{
+    padding: 24px 160px 16px 160px;
+}
+.comment__heading{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 28px;
+    margin: 0 0 24px 0;
+    color: var(--primary-color);
+}
+.comment__context{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.comment__context input{
+    flex: 1;
+    font-size: 14px;
+    padding: 8px 0;
+    margin-right: 36px;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid var(--primary-color);
+}
+.comment__context button{
+    min-width: 100px;
+    padding: 8px 0;
+    border: none;
+    color: #fff;
+    background-color: var(--primary-color);
+    border-radius: 2px;
+    cursor: pointer;
+}
+.comment__item{
+    padding-bottom: 8px;
+    /* border-bottom: 1px solid var(--primary-color); */
+}
+.comment__item_username{
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+}
+.comment__item_content{
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--text-color);
+}
