--- a/src/css/Profile_page.module.css
+++ b/src/css/Profile_page.module.css
@@ -17,10 +17,6 @@
     flex-direction: column;
     padding: 0 80px;
 }
-.first_line{
-    display: grid;
-    grid-template-columns: 45%  10% 45%;
-}
 .phone_number,
 .address,
 .date_of_birth,
@@ -56,13 +52,13 @@
     padding: 12px 16px;
     font-size: 14px;
     line-height: 14px;
-    color: var(--text-color);
+    /* color: var(--text-color); */
     outline: none;
     border-radius: 5px;
     border: 1px solid var(--primary-color);
 }
 .btn__profile{
-    background-color: var(--primary---color-rgba4);
-    border: 1px solid var(--primary---color-rgba4);
+    /* background-color: var(--primary---color-rgba4);
+    border: 1px solid var(--primary---color-rgba4); */
     margin-top: 32px;
 }
