--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,11 @@ html{
 :root{
   --white-color: #ffffff;
   --black-color: #000000;
-  --primary-color: #4682B4;
+  --primary-color: #00A4B4;
   --primary---color-rgba: rgba(70, 130, 180, 0.1);
-  --primary---color-rgba1: rgba(70, 130, 180, 0.9);
+  --primary---color-rgba1: rgba(0, 164, 180, 0.9);
   --primary---color-rgba2: rgba(70, 130, 180, 0.25);
-  --primary---color-rgba3: rgba(70, 130, 180, 0.8);
+  --primary---color-rgba3: rgba(0, 164, 180, 0.5);
   --primary---color-rgba4: rgba(70, 130, 180, 0.6);
   --white-color-rgba: rgba(255, 255, 255, 0.85);
   --text-color: #666666;
@@ -56,6 +56,8 @@ html{
 .products__category{
   display: flex;
   flex-direction: column;
+  max-width: 1248px;
+  margin: 32px 24px;
 }
 .products__category + .products__category{
   margin-top: 50px;
@@ -97,32 +99,32 @@ html{
   background-color: var(--primary-color);
 }
 
-.products__item + .products__item{
+/* .products__item + .products__item{
   margin-left: 48px;
-}
-.products__img{
+} */
+/* .products__img{
   width: 250px;
   height: 250px;
   border-radius: 5px;
   overflow: hidden;
-}
-.products__img img{
+} */
+/* .products__img img{
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-.products__item h3{
+} */
+/* .products__item h3{
   font-family: 'Poppins', sans-serif;
   font-size: 20px;
   font-weight: 500;
   line-height: 20px;
   color: var(--text-color);
   cursor: pointer;
-}
-.products__item span{
+} */
+/* .products__item span{
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 18px;
   color: var(--text-color);
-}
+} */
