--- a/src/css/Account_page.module.css
+++ b/src/css/Account_page.module.css
@@ -2,11 +2,11 @@
     width: 100%;
     height: 679px;
     font-family: 'Roboto', sans-serif;
-    background-image: url('../assets/signin.jpg');
+    /* background-image: url('../assets/signin.jpg'); */
     background-repeat: no-repeat;
     background-size: cover;
     display: grid;
-    grid-template-columns: 40% 60% ;
+    /* grid-template-columns: 40% 60% ; */
     margin-top: 60px;
 }
 .background{
@@ -33,6 +33,8 @@
     background-color: var(--white-color-rgba);
     padding: 36px;
     border-radius: 20px;
+    background-color: #f5f5f5;
+    /* box-shadow: 0 0 10px var(--primary---color-rgba3); */
 }
 .wrapper h2{
     font-size: 32px;
