--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "GoldmanBold";
+    src: local("GoldmanBold"),
+     url("./assets/fonts/FontsFree-Net-Goldman-Bold.ttf") format("truetype");
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: "GoldmanRegular";
+    src: local("GoldmanRegular"),
+     url("./assets/fonts/FontsFree-Net-Goldman-Regular.ttf") format("truetype");
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "TextaProBold";
+    src: local("TextaProBold"),
+     url("./assets/fonts/TextaPro-Bold.otf") format("truetype");
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "TextaProRegular";
+    src: local("TextaProRegular"),
+     url("./assets/fonts/TextaPro-Regular.otf") format("truetype");
+    font-weight: normal;
+}
+    
