--- a/src/components/ConstComponets/ScrollButton/ScrollButton.module.css
+++ b/src/components/ConstComponets/ScrollButton/ScrollButton.module.css
@@ -1,7 +1,7 @@
 .button {
     position: fixed;
-    left: 95%;
-    bottom: 40px;
+    right: 28px;
+    bottom: 90px;
     width: 40px;
     height: 40px;
     display: flex;
